--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(top.png);
+  background-image: url(https://github.com/ASTNS/ASTNS.github.io/blob/main/05BA7BF5-DE33-417C-A45D-B515F2440423.png?raw=true;)
   background-size: cover;
   color: white;
   text-align: center;
